# navidrome_backup_restore

./: .gitignore  Cargo.toml  config.toml  example_interaction.txt  readme.md
.github/workflows/: rust-build.yml
src/: backup.rs  config.rs  input.rs  main.rs
src/client/: mod.rs
src/navidrome_db/: mod.rs  structs.rs
src/update/: mod.rs  queries.rs  updaters.rs
src/update/ui/: constants.rs  elements.rs  interface.rs  mod.rs
