[package]
name = "navidrome_backup_restore"
version = "0.1.0"
authors = ["teeaychem"]
edition = "2021"

[dependencies]
chrono = "0.4.39"
rusqlite = { version = "0.32.0", features = [ "backup", "bundled",  "modern_sqlite", "chrono"] }
tokio = { version = "1.42.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0.133"
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "2.0.9"
crossterm = "0.28.1"
toml = "0.8.19"
log = "0.4.22"
clap = { version = "4.5.23", features = ["cargo"] }
